# Build-Standard-RAG-with-Qdrant

./: LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  demo.ipynb  gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
carag/: __init__.py  llm_pipeline.py  rag_pipeline.py  version.py
