[build-system]
requires = ["setuptools", "wheel", "build==1.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "carag"
version = "1.0.7"
description = "An efficient python library for building AI applications using the Retrieval-Augmented Generation (RAG) pipeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name="Mohamed Rizwan", email="rizdelhi@gmail.com" }]
keywords = ["Semantic search", "RAG", "Mistral AI", "Retrieval", "Qdrant"]
dependencies = [
    "mistralai==1.6.0",
    "PyMuPDF==1.25.3",
    "fastembed==0.6.0",
    "qdrant-client==1.10.0",
    "python-dotenv==1.1.0",
    "ipywidgets==8.1.6"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
