[metadata]
name = carag
version = 1.0.6
author = Mohamed Rizwan
author_email = rizdelhi@gmail.com
description = An efficient Python library for building AI applications using the Retrieval-Augmented Generation (RAG) pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
license = "GPL-3.0-or-later"
license_files = LICENSE.txt
url = https://github.com/rizwandel/CARAG
classifiers =
    Development Status ::  3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyMuPDF==1.25.3 # PDF Document loader
    fastembed==0.6.0
    qdrant-client==1.10.0 # Qdrant vector database
    mistralai==1.6.0
    python-dotenv==1.1.0

[options.packages.find]
where = .
